--- a/book.toml
+++ b/book.toml
@@ -9,6 +9,7 @@ build-dir = "docs/book"
 
 [output.html]
 preferred-dark-theme = "rust"
+additional-js = ["mermaid.min.js"]
 
 [output.html.playground]
 editable = false
