--- a/book.toml
+++ b/book.toml
@@ -9,7 +9,7 @@ build-dir = "docs/book"
 
 [output.html]
 preferred-dark-theme = "rust"
-additional-js = ["mermaid.min.js"]
+theme = "theme"
 
 [output.html.playground]
 editable = false
