refactor: Simplify Mermaid setup by removing theme directory
- Remove theme/ directory override (no longer needed)
- Use additional-html-head in book.toml to inject Mermaid CDN script
- Mermaid initialization now inline in book.toml
- Cleaner, more maintainable approach
- No custom theme files needed

--- a/book.toml
+++ b/book.toml
@@ -9,7 +9,15 @@ build-dir = "docs/book"
 
 [output.html]
 preferred-dark-theme = "rust"
-theme = "theme"
+additional-html-head = """
+<script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
+<script>
+if (typeof mermaid !== 'undefined') {
+    mermaid.initialize({ startOnLoad: true, theme: 'default' });
+    mermaid.contentLoaded();
+}
+</script>
+"""
 
 [output.html.playground]
 editable = false
