refactor: Use standard mdbook-mermaid setup instead of CDN
- Removed theme/ directory override (no longer needed)
- Using mdbook-mermaid install command as designed
- Added mermaid.min.js (2.5 MB) and mermaid-init.js as local files
- These are automatically managed by mdbook-mermaid
- Works offline, no external CDN dependency
- This is the standard Rust book approach
- Simpler configuration in book.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -131,6 +131,8 @@ type_complexity = "warn"
 unwrap_used = "warn"
 expect_used = "warn"
 
+# Advanced features examples integrated into new_features_demo.rs
+
 [workspace.lints.rust]
 unsafe_code = "deny"
 missing_docs = "warn"
