--- a/book.toml
+++ b/book.toml
@@ -9,7 +9,7 @@ build-dir = "docs/book"
 
 [output.html]
 preferred-dark-theme = "rust"
-theme = "theme"
+additional-js = ["mermaid.min.js", "mermaid-init.js"]
 
 [output.html.playground]
 editable = false
