feat: Move mermaid JS files to docs/ directory
- Update book.toml to reference mermaid files from docs/ path
- Modify Justfile to move generated files from root to docs/
- Update .gitignore to reflect new mermaid file locations in docs/
- Keeps mermaid assets organized within the docs directory structure

--- a/book.toml
+++ b/book.toml
@@ -9,7 +9,7 @@ build-dir = "docs/book"
 
 [output.html]
 preferred-dark-theme = "rust"
-additional-js = ["mermaid.min.js", "mermaid-init.js"]
+additional-js = ["docs/mermaid.min.js", "docs/mermaid-init.js"]
 
 [output.html.playground]
 editable = false
