--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ work/
 
 # Generated documentation
 /docs/book/
--e 
+
 # mdbook-mermaid generated files
-mermaid.min.js
-mermaid-init.js
+/docs/mermaid.min.js
+/docs/mermaid-init.js
