--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rumpsteak-aura"
-version = "0.3.1"
+version = "0.4.0"
 authors = ["Zak Cutner <me@zakcutner.uk>", "Sam Hart <sam@hxrts.com>"]
 edition = "2021"
 rust-version = "1.75"
@@ -19,8 +19,8 @@ futures = { workspace = true }
 time = { workspace = true }
 base64 = { workspace = true }
 hex = { workspace = true }
-rumpsteak-aura-fsm = { path = "fsm", version = "0.3.1", optional = true }
-rumpsteak-aura-macros = { path = "macros", version = "0.3.1" }
+rumpsteak-aura-fsm = { path = "fsm", version = "0.4.0", optional = true }
+rumpsteak-aura-macros = { path = "macros", version = "0.4.0" }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
@@ -47,7 +47,7 @@ rand = { workspace = true, optional = true }
 
 [dev-dependencies]
 criterion = { workspace = true }
-rumpsteak-aura-choreography = { path = "choreography", version = "0.3.1" }
+rumpsteak-aura-choreography = { path = "choreography", version = "0.4.0" }
 futures = { workspace = true, features = ["thread-pool"] }
 num-complex = "0.4"
 rand = { workspace = true }
@@ -70,69 +70,53 @@ debug = true
 [profile.bench]
 debug = true
 
-# [workspace]
-# members = ["caching", "fsm", "macros", "choreography"]
-# exclude = ["examples/wasm-ping-pong"]
+[workspace]
+members = ["caching", "fsm", "macros", "choreography"]
+exclude = ["examples/wasm-ping-pong"]
 
-# Shared dependencies across workspace members (now handled by main Aura workspace)
-# [workspace.dependencies]
+# Shared dependencies across workspace members
+[workspace.dependencies]
 # Core async/concurrency
-# futures = "0.3"
-# tokio = { version = "1.35", features = ["full"] }
-# async-trait = "0.1"
-# async-recursion = "1.0"
+futures = "0.3"
+tokio = { version = "1.35", features = ["full"] }
+async-trait = "0.1"
+async-recursion = "1.0"
 
 # WASM support
-# wasm-bindgen = "0.2"
-# wasm-bindgen-futures = "0.4"
-# wasm-timer = "0.2"
-# getrandom = { version = "0.2", features = ["js"] }
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+wasm-timer = "0.2"
+getrandom = { version = "0.2", features = ["js"] }
 
 # Serialization
-# serde = { version = "1.0", features = ["derive"] }
-# bincode = "1.3"
-# time = { version = "0.3", features = ["serde"] }
-# base64 = "0.21"
-# hex = "0.4"
-# uuid = { version = "1.6", features = ["v4", "serde", "js"] }
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
+time = { version = "0.3", features = ["serde"] }
+base64 = "0.21"
+hex = "0.4"
+uuid = { version = "1.6", features = ["v4", "serde", "js"] }
 
 # Error handling
-# thiserror = "1.0"
-# anyhow = "1.0"
+thiserror = "1.0"
+anyhow = "1.0"
 
 # Proc macros
-# proc-macro2 = "1.0"
-# quote = "1.0"
-# syn = { version = "2.0", features = ["full", "extra-traits"] }
+proc-macro2 = "1.0"
+quote = "1.0"
+syn = { version = "2.0", features = ["full", "extra-traits"] }
 
 # Logging/tracing
-# tracing = "0.1"
-# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # Utilities
-# rand = "0.8"
+rand = "0.8"
 
 # Parsing
-# pest = "2.7"
-# pest_derive = "2.7"
+pest = "2.7"
+pest_derive = "2.7"
 
 # Testing
-# criterion = "0.3"
-# proptest = "1.4"
-# tempfile = "3.2"
-
-# Align with Aura project standards
-# [workspace.lints.clippy]
-# disallowed_methods = "deny"
-# disallowed_types = "deny"
-# missing_docs_in_private_items = "allow"
-# too_many_arguments = "warn"
-# type_complexity = "warn"
-# unwrap_used = "warn"
-# expect_used = "warn"
-
-# Advanced features examples integrated into new_features_demo.rs
-
-# [workspace.lints.rust]
-# unsafe_code = "deny"
-# missing_docs = "warn"
+criterion = "0.3"
+proptest = "1.4"
+tempfile = "3.2"
