--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rumpsteak-aura"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Zak Cutner <me@zakcutner.uk>", "Sam Hart <sam@hxrts.com>"]
 edition = "2021"
 rust-version = "1.75"
@@ -19,7 +19,8 @@ futures = { workspace = true }
 time = { workspace = true }
 base64 = { workspace = true }
 hex = { workspace = true }
-rumpsteak-aura-macros = { path = "macros", version = "0.5.0" }
+rumpsteak-aura-macros = { path = "macros", version = "0.6.0" }
+rumpsteak-aura-fsm = { path = "fsm", version = "0.6.0", optional = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
@@ -57,7 +58,7 @@ tracing-subscriber = { workspace = true }
 
 [features]
 default = []
-serialize = ["rumpsteak-aura-macros/serialize"]
+serialize = ["rumpsteak-aura-macros/serialize", "rumpsteak-aura-fsm"]
 test-utils = ["rand"]
 wasm = ["getrandom/js"]
 
@@ -69,7 +70,7 @@ debug = true
 
 [workspace]
 members = ["caching", "fsm", "macros", "choreography"]
-exclude = ["examples/wasm-ping-pong"]
+exclude = ["examples/wasm-ping-pong", "external-macro-demo"]
 
 # Shared dependencies across workspace members
 [workspace.dependencies]
@@ -108,6 +109,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # Utilities
 rand = "0.8"
+regex = "1.10"
+lazy_static = "1.4"
+toml = "0.8"
 
 # Parsing
 pest = "2.7"
